--- a/Styles.css
+++ b/Styles.css
@@ -64,6 +64,9 @@
   font-family: 'Tomorrow', sans-serif;
 }
 
+
+
+
 /* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
@@ -125,6 +128,7 @@ font-family: 'Tomorrow', sans-serif;
 }
 
 
+/* Kenny's Body */
 /*This code is for background image */
 body {
   
@@ -138,3 +142,411 @@ body {
 
 }
 
+
+/*  Mike's CSS */
+
+/* CSS Style Sheet */
+@font-face {
+    font-family: 'roboto','Rubik','PT Serif', serif,'arial','Helvetica Neue', 'Helvetica', 'sans-serif';
+	}
+
+html {
+  background-image: url("https://www.augeanrobotics.com/images/Farmplants.jpg");
+  background-color: rgb(255,255,255,1);
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+  height:100%;
+}
+
+
+#hone{
+	color:rgba(0,0,0,1);
+	font-size:20px;
+	font-weight: bold;
+	text-align:left;
+	vertical-align:text-bottom;
+	}
+
+
+}
+
+
+/*Body*/
+/* Mike's Body */
+body{
+	margin-left: auto;
+	margin-right: auto;
+	padding: 0;
+	margin-top: 0px;
+	min-width:1024px;
+	width: 100%;
+	font-family: 'roboto','Rubik','PT Serif', serif,'arial', 'Helvetica Neue', 'Helvetica', 'sans-serif';
+	overflow:scroll;
+}
+
+#main{
+  	width: 100%;
+	height:1000px;
+    overflow:hidden;
+    background-color: rgba(204,204,204,0.9);
+	float: left;
+    display: block;
+    text-align: left;
+    text-decoration: none;
+    letter-spacing: .15em;
+    font-size: 1em;
+    color: rgba(43,45,50,1.0);
+}
+#mainspacer{
+  	width: 100%;
+	height:100px;
+    overflow:hidden;
+	background-color: rgba(204,204,204,0.9);
+	float: left;
+    display: block;
+}
+
+#contmain1{
+	margin: auto;
+	width:1024px;
+	height: 2925PX;
+	background-color: rgba(255,255,255,.95);
+	overflow: Hidden;
+	color:rgba(0,0,0,1);
+	font-size:18px;
+	text-align:left;
+}
+
+/*Data Page only*/
+#contmaindata{
+	margin: auto;
+	width:1024px;
+	height: 1925PX;
+	background-color: rgba(255,255,255,.95);
+	overflow: Hidden;
+	color:rgba(0,0,0,1);
+	font-size:18px;
+	text-align:left;
+}
+#datatitle1{
+	height:40px;
+	float: left;
+	Text-align: justify;
+	overflow: Hidden;
+	position:relative;
+	top:10px;
+	color:rgba(0,94,29,1);
+	font-size:30px;
+	font-weight: bold;
+	text-align:left;
+	vertical-align:text-bottom;
+	}
+
+#datatitle2{
+	width:1024px;
+	height:40px;
+	float: left;
+	Text-align: justify;
+	overflow: Hidden;
+	position:relative;
+	top:10px;
+	color:rgba(80,80,80,1);
+	font-size:22px;
+	font-weight: bold;
+	text-align:left;
+	vertical-align:text-bottom;
+	}
+
+#databox1{
+	background-color: rgba(69,122,28,1);
+	position: absolute;
+	display: block;
+	top:200px;
+	width:500px;
+	height:220px;
+}
+
+#databox2{
+	background-color: rgba(80,80,80,1);
+	position: absolute;
+	display: block;
+	top:200px;
+	width:500px;
+	right:120px;
+	height:220px;
+}
+
+#dataaccent{
+	font-weight: bold;
+	color:rgba(248,204,33,1);
+}
+
+#datatitle3{
+	height:40px;
+	float: Center;
+	Text-align: justify;
+	overflow: Hidden;
+	position:relative;
+	top:10px;
+	left: 5px;
+	color:rgba(255,255,255,1);
+	font-size:22px;
+	font-weight: bold;
+	text-align:left;
+	vertical-align:text-bottom;
+	}
+#datatext1{
+	float: left;
+	Text-align: justify;
+	overflow: Hidden;
+	position:relative;
+	color:rgba(255,255,255,1);
+	font-size:14px;
+	text-align:left;
+	vertical-align:text-bottom;
+}
+#datatitle4{
+	height:40px;
+	float: left;
+	Text-align: justify;
+	overflow: Hidden;
+	position:absolute;
+	top:440px;
+	color:rgba(0,94,29,1);
+	font-size:30px;
+	font-weight: bold;
+	text-align:left;
+	vertical-align:text-bottom;
+	}
+#datamap{
+	position: absolute;
+	top:500px;
+}
+
+/*Careers Page only*/
+#contmaincareers{
+	margin: auto;
+	width:1024px;
+	height: 1475PX;
+	background-color: rgba(255,255,255,.95);
+}
+#careerstitle{
+	width:1024px;
+	height:32px;
+	float: left;
+	Text-align: justify;
+	overflow: Hidden;
+	position:absolute;
+	Top:120px;
+	color:rgba(69,122,28,1);
+	font-size:30px;
+	font-weight: bold;
+	text-align:center;
+	vertical-align:text-bottom;
+	}
+#careerstext{
+	min-height: auto;
+    overflow: Hidden;
+	top:100px;
+	position:relative;
+	color:rgba(0,0,0,1);
+	padding-left:1%;
+	padding-right:1%;
+	font-size:18px;
+	text-align:left;
+}
+#Openroles{
+	width:1024px;
+	float: left;
+	Text-align: justify;
+	overflow: Hidden;
+	position:relative;
+	top:125px;
+	color:rgba(69,122,28,1);
+	font-size:30px;
+	font-weight: bold;
+	text-align:center;
+	vertical-align:text-bottom;
+}
+#cto{
+	top:150px;
+	position:relative;
+	padding-left:1%;
+	padding-right:1%;
+	font-size:19px;
+	text-align:left;
+}
+
+/* unvisited link */
+#cto a:link {
+    color: rgba(0,0,0,1);
+}
+/* visited link */
+#cto a:visited {
+    color: rgba(0,0,0,1);
+}
+/* mouse over link */
+#cto a:hover {
+	color: rgba(14,138,250,1);
+}
+/* selected link */
+#cto a:active {
+    color: rgba(14,138,250,1);
+}
+#careerswhatwedo{
+	min-height: auto;
+    overflow: Hidden;
+	top:200px;
+	position:relative;
+	color:rgba(0,0,0,1);
+	font-size:18px;
+	text-align:left;
+}
+
+
+/*contact us page only*/
+#contactustitle{
+	width:1024px;
+	height:32px;
+	float: left;
+	Text-align: justify;
+	overflow: Hidden;
+	position:relative;
+	color:rgba(69,122,28,1);
+	font-size:30px;
+	top:10px;
+	font-weight: bold;
+	text-align:center;
+	vertical-align:text-bottom;
+	}
+
+#contactfooter{
+	background-color: #2B2D32;
+	clear: both;
+	width:100%;
+	min-width: 1024px;
+	height: 250px;
+	overflow: auto;
+	padding-top: 0%;
+	bottom: 0;
+	left: 0;
+	position: relative;
+	float: left;
+	overflow: hidden;
+}
+
+
+
+/* Curtis CSS */
+
+p {
+    font-family: 'Tomorrow', sans-serif;
+}
+
+#myVideo {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -1;
+    transform: translateX(-50%) translateY(-50%);
+    background: url(images/webbannerstill.jpg) no-repeat;
+    background-size: cover;
+}
+
+.menu {
+    font-family: 'Tomorrow', sans-serif;
+    font-size: 17px;
+}
+
+.menu li:hover{
+  background: #B30005
+}
+
+.MEET {
+    color: white;
+    font-size: 100px;
+}
+
+.AUTO {
+    color: white;
+    font-size: 40px;
+}
+
+.img-overlay {
+  text-align: center;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.img-overlay:before {
+  content: ' ';
+  display: block;
+  /* adjust 'height' to position overlay content vertically */
+  height: 27%;
+}
+
+.nav li {
+  display:inline-block;
+}
+
+.content {
+  position: fixed;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: 100%;
+  padding: 15px;
+}
+
+.robotimg {
+    padding: 0;
+    display: block;
+    margin: 0 auto;
+    max-height: 100%;
+    max-width: 100%;
+}
+
+#videos {
+	position:relative;
+	margin: auto;
+	width:1024px;
+	left:0;
+	right:0;
+	top:25px;
+	overflow: Hidden;
+}
+
+
+
+/* James CSS */
+#header{
+	margin-top:1em;
+	margin-bottom: 1em;
+}
+
+
+#textbox{
+	border-bottom: 1px black;
+}
+
+#coverage{
+	margin-top: 2em;
+	margin-bottom: 1em;
+}
+
+#overviewlink{
+	margin-bottom: 4em;
+
+}
+
+#box-titles{
+	margin-top:1em;
+}
