--- a/Style.css
+++ b/Style.css
@@ -81,3 +81,15 @@ p {
 	top:25px;
 	overflow: Hidden;
 }
+
+body {
+  
+  background-image: url('images/grape-vine-ConvertImage.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: 100% 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: 100%;
+
+}
