--- a/Style.css
+++ b/Style.css
@@ -86,10 +86,10 @@ body {
   
   background-image: url('images/grape-vine-ConvertImage.jpg');
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: 100% 100%;
+  /*background-attachment: fixed;
+  background-position: 100% 100%;*/
   background-color: rgba(0, 0, 0, 0.5);
   color: #f1f1f1;
   width: 100%;
-
+  height: 100%;	
 }
