--- a/Styles.css
+++ b/Styles.css
@@ -135,9 +135,10 @@ body {
   background-image: url('images/grape-vine-ConvertImage.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: 100% 100%;
+  background-position: center center;
   background-color: rgba(0, 0, 0, 0.5);
+  background-size: cover;
   color: #f1f1f1;
-  width: 100%;
-
+  /*width: 100%;
+  height: 100%;*/
 }
