--- a/JDstyle.css
+++ b/JDstyle.css
@@ -2,14 +2,14 @@
 	margin-top:1em;
 	margin-bottom: 1em;
 	font-family: 'Tomorrow', sans-serif;
-	color: #b30005;
+	color: #ee3f43;
 }
 
 
 #textbox{
 	border-bottom: 1px black;
 	font-family: 'Tomorrow', sans-serif;
-	color: #b30005;
+	color: #db0e13;
 }
 
 #coverage{
