--- a/Style.css
+++ b/Style.css
@@ -2,6 +2,11 @@ p {
     font-family: 'Tomorrow', sans-serif;
 }
 
+#opacity{
+	background-color: white;
+	opacity: 0.5;
+}
+
 #myVideo {
     position: fixed;
     top: 50%;
