--- a/JDstyle.css
+++ b/JDstyle.css
@@ -7,14 +7,15 @@
 	margin-top:1em;
 	margin-bottom: 1em;
 	font-family: 'Tomorrow', sans-serif;
-	color: #ee3f43;
+	color: #db0e13;
 }
 
 
 #textbox{
-	border-bottom: 1px black;
 	font-family: 'Tomorrow', sans-serif;
-	color: #db0e13;
+	background-color: #c7c7c7;
+	border-style: solid;
+	border-color: #db0e13;
 }
 
 #coverage{
@@ -30,7 +31,7 @@
 #box-titles{
 	margin-top:1em;
 	font-family: 'Tomorrow', sans-serif;
-	color: #b30005;
+	color: #db0e13;
 }
 
 #myVideo {
