--- a/JDstyle.css
+++ b/JDstyle.css
@@ -5,7 +5,7 @@
 	margin-bottom: 1em;
 	font-family: 'Tomorrow', sans-serif;
 	color: #db0e13;
-	text-shadow: 1px 2px 15px white;
+	text-shadow: 2px 2px white;
 }
 
 
