--- a/JDstyle.css
+++ b/JDstyle.css
@@ -4,8 +4,8 @@
 	margin-top:1em;
 	margin-bottom: 1em;
 	font-family: 'Tomorrow', sans-serif;
-	color: #db0e13;
-	text-shadow: 2px 2px white;
+	color: white;
+	text-shadow: 2px 2px #db0e13;
 }
 
 
