--- a/Style.css
+++ b/Style.css
@@ -2,7 +2,7 @@ p {
     font-family: 'Tomorrow', sans-serif;
 }
 
-h{
+.header{
     font-family: 'Tomorrow', sans-serif;	
     color: white;
     text-shadow: 2px 2px #db0e13;
