--- a/Style.css
+++ b/Style.css
@@ -2,7 +2,7 @@ p {
     font-family: 'Tomorrow', sans-serif;
 }
 
-.header{
+h1{
     font-family: 'Tomorrow', sans-serif;	
     color: white;
     text-shadow: 2px 2px #db0e13;
