--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,9 @@
 p {
     font-family: 'Tomorrow', sans-serif;
+    background-color: #888888;
+    border-style: solid;
+    border-color: #db0e13;
+    color: white;
 }
 
 h1{
