--- a/Style.css
+++ b/Style.css
@@ -1,9 +1,5 @@
 p {
     font-family: 'Tomorrow', sans-serif;
-    background-color: #888888;
-    border-style: solid;
-    border-color: #db0e13;
-    color: white;
 }
 
 h1{
@@ -114,4 +110,17 @@ body {
 }
 a{
 	color: #db0e13;
+}
+
+burro{
+	background-color: #888888;
+	border-style: solid;
+	border-color: #db0e13;
+	color: white;
+}
+over{
+	background-color: #888888;
+	border-style: solid;
+	border-color: #db0e13;
+	color: white;
 }
