--- a/JDstyle.css
+++ b/JDstyle.css
@@ -20,10 +20,13 @@
 #coverage{
 	margin-top: 2em;
 	margin-bottom: 1em;
+	color: white;
+	text-shadow: 2px 2px #db0e13;
 }
 
 #overviewlink{
 	margin-bottom: 4em;
+	color: white;
 
 }
 
