--- a/Styles.css
+++ b/Styles.css
@@ -34,7 +34,7 @@ a{
 }
 
 /* Next & previous buttons */
-.prev, .next {
+#prev, #next {
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -51,13 +51,13 @@ a{
 }
 
 /* Position the "next button" to the right */
-.next {
+#next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
+#prev:hover, #next:hover {
   background-color: rgba(0,0,0,0.8);
   color: white;
 }
