--- a/Styles.css
+++ b/Styles.css
@@ -158,7 +158,7 @@ body {
   background-size: cover;
   /*color: #f1f1f1; */
 }
-
+/*
 .menu {
     font-family: 'Tomorrow', sans-serif;
     font-size: 17px;
@@ -190,7 +190,7 @@ body {
 .img-overlay:before {
   content: ' ';
   display: block;
-  /* adjust 'height' to position overlay content vertically */
+  adjust 'height' to position overlay content vertically 
   height: 27%;
 }
 
@@ -201,5 +201,5 @@ body {
 
 
 
-
+*/
 
