--- a/Styles.css
+++ b/Styles.css
@@ -56,7 +56,7 @@ a{
 
 /* Caption text */
 .text {
-  /*color: #6c757d;*/
+  color: white;
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
@@ -68,7 +68,7 @@ a{
 
 /* Number text (1/3 etc) */
 .numbertext {
-  /*color: #6c757d;*/
+  color: white;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
@@ -158,7 +158,7 @@ body {
   background-size: cover;
   /*color: #f1f1f1; */
 }
-/*
+
 .menu {
     font-family: 'Tomorrow', sans-serif;
     font-size: 17px;
@@ -201,5 +201,4 @@ body {
 
 
 
-*/
 
