--- a/Style.css
+++ b/Style.css
@@ -124,3 +124,9 @@ over{
 	border-color: #db0e13;
 	color: white;
 }
+#careerstext{
+	background-color: #888888;
+	border-style: solid;
+	border-color: #db0e13;
+	color: white;
+}
