--- a/Style.css
+++ b/Style.css
@@ -130,3 +130,10 @@ over{
 	border-color: #db0e13;
 	color: white;
 }
+
+#par{
+	background-color: #888888;
+	border-style: solid;
+	border-color: #db0e13;
+	color: white;	
+}
