--- a/MJstyle.css
+++ b/MJstyle.css
@@ -13,12 +13,14 @@ h1{
 #careerstext{
 	min-height:auto;
         overflow: Hidden;
-	top:100px;
+	top:1px;
 	position:relative;;
 	padding-left:2%;
 	padding-right:2%;
+	font-size:16px;
 	text-align:left;
 }
+
 
 
 
