--- a/JDstyle.css
+++ b/JDstyle.css
@@ -1,5 +1,6 @@
 a{
 	color: white;
+	text-decoration: underline;
 }
 
 #header{
@@ -38,7 +39,7 @@ a{
 	color: white;
 	text-shadow: 2px 2px #db0e13;
 }
-
+/*
 #myVideo {
     position: fixed;
     top: 50%;
@@ -52,7 +53,7 @@ a{
     background: url(images/webbannerstill.jpg) no-repeat;
     background-size: cover;
 }
-
+*/
 .menu {
     font-family: 'Tomorrow', sans-serif;
     font-size: 17px;
@@ -61,7 +62,7 @@ a{
 .menu li:hover{
   background: #B30005
 }
-
+/*
 .MEET {
     color: white;
     font-size: 100px;
@@ -85,6 +86,7 @@ a{
   content: ' ';
   display: block;
   /* adjust 'height' to position overlay content vertically */
+/*
   height: 27%;
 }
 
@@ -118,7 +120,7 @@ a{
 	top:25px;
 	overflow: Hidden;
 }
-
+*/
 body {
   
   background-image: url('images/grape-vine-ConvertImage.jpg');
