--- a/JDstyle.css
+++ b/JDstyle.css
@@ -1,7 +1,10 @@
+
+/* active links */
 a{
 	color: white;
 }
 
+/*headers to pages */
 #header{
 	margin-top:1em;
 	margin-bottom: 1em;
@@ -10,7 +13,7 @@ a{
 	text-shadow: 2px 2px #db0e13;
 }
 
-
+/*text boxes */
 #textbox{
 	font-family: 'Tomorrow', sans-serif;
 	background-color: #888888;
@@ -26,33 +29,27 @@ a{
 	text-shadow: 2px 2px #db0e13;
 }
 
+/*link to page with overview of robots */
 #overviewlink{
 	margin-bottom: 4em;
 	color: white;
 
 }
 
+/* text box titles */
 #box-titles{
 	margin-top:1em;
 	font-family: 'Tomorrow', sans-serif;
 	color: white;
 	text-shadow: 2px 2px #db0e13;
 }
-/*
-#myVideo {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -1;
-    transform: translateX(-50%) translateY(-50%);
-    background: url(images/webbannerstill.jpg) no-repeat;
-    background-size: cover;
+
+/* form links */
+label{
+	color: black;
 }
-*/
+
+/* Nav bar */
 .menu {
     font-family: 'Tomorrow', sans-serif;
     font-size: 17px;
@@ -61,65 +58,14 @@ a{
 .menu li:hover{
   background: #B30005
 }
-/*
-.MEET {
-    color: white;
-    font-size: 100px;
-}
 
-.AUTO {
-    color: white;
-    font-size: 40px;
-}
-
-.img-overlay {
-  text-align: center;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-
-.img-overlay:before {
-  content: ' ';
-  display: block;
-  /* adjust 'height' to position overlay content vertically */
-/*
-  height: 27%;
-}
 
 .nav li {
   display:inline-block;
 }
+/* end of nav bar */
 
-.content {
-  position: fixed;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
-  color: #f1f1f1;
-  width: 100%;
-  padding: 15px;
-}
-
-.robotimg {
-    padding: 0;
-    display: block;
-    margin: 0 auto;
-    max-height: 100%;
-    max-width: 100%;
-}
-
-#videos {
-	position:relative;
-	margin: auto;
-	width:1024px;
-	left:0;
-	right:0;
-	top:25px;
-	overflow: Hidden;
-}
-*/
+/* background image to page */
 body {
   
   background-image: url('images/grape-vine-ConvertImage.jpg');
